2003-11-27 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b38

	* Change: Wording in configdata.

2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b37

	* Turn on error display (if off) in devMode.

	* Fixed incorrect warning in check_mail.php under windows.

	* Colour of font changed in redmarble skin.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b36

	* Change: Removed debug code.

2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b35

	* Bugfix: "get rid of resized" didnt work if translated button label
		  contained htmlentities.

2003-11-25 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b34

	* Bugfix: Multilanguage was not disabled when in Linux, with gettext and
		  found locales were not suitable.

	* Change: Wording to make sure we are talking about <b>system<b> locales.

2003-11-24  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b33

	* Fixed bug where site wide slide show ran out of memory.

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b32

	* Bugfix: remove '' around popup url as we use now "".
		  (Bug was introduced in b31)

2003-11-24 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b31

	* Change: Layout of check_versions.

	* Change: Layout of Config step 2 and 3.

	* "Bugfix": Corrected a lot HTML errors. Added quotes etc.

2003-11-22  Chris Schwerdt  <muti@afterglo.ws> 1.4.2-cvs-b30

	* Re-organized gallery_remote2.php.  Each command now has
	  its own function call instead of being compared
	  sequentially.

2003-11-22  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b29

	* Spelling corrections.

	* Improvements to shadows frame. Should this go into 1.4.1?

2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b28

	* Updated EZ Prints form to new API in view_photo.php.

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b27

	* More tweaks to the check_versions.php text.

2003-11-20  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b26

	* Fixed typo in check_versions.php
