@@ -1,3 +1,7 @@
+2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b39
+
+	* Poll properties can now be applied recursively.
+
 2003-11-27 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b38
 
 	* Change: Wording in configdata.
